solved dependencies and added team

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,9 +13,9 @@
 	<url>aaronmuetze.ddns.net</url>
 
 	<modules>
-		<module>user</module>
-		<module>login</module>
+		<!-- <module>user</module> -->
 		<module>chat</module>
+		<module>user</module>
 	</modules>
 
 	<properties>
